2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-scale.hg: fix the construction param names

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/clone-texture.hg: fixe CloneTexture so it actually works.
	Give it the write GType, fix the construct param property name

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/timeline.hg: add proper constructor -- there is no default
	constructor for Timeline

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm.h: update main super-header to include all of the new
	headers that we've added recently
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/clone-texture.ccg:
	* clutter/src/clone-texture.hg:
	* tools/m4/convert_cluttermm.m4: add initial implementation of CloneTexture
	class

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* tools/m4/convert_cluttermm.m4:
	* clutter/src/types.hg: add Gravity enum
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour-scale.ccg:
	* clutter/src/behaviour-scale.hg: added initial implementation of
	BehaviourScale class

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* Update to latest clutter trunk API
	* clutter/src/actor.hg: renamed get_id() to get_gid()
	* clutter/src/behaviour-ellipse.hg: renamed *_angle_begin to *_angle_start

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour-ellipse.ccg:
	* clutter/src/behaviour-ellipse.hg:
	* clutter/src/behaviour-rotate.ccg:
	* clutter/src/behaviour-rotate.hg: added initial implementation of
	BehaviourRotate class

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/types.ccg/hg:
	* clutter/cluttermm/types.h: move this to types.hg so that we can wrap some
	enums here with gmmproc
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour-ellipse.ccg:
	* clutter/src/behaviour-ellipse.hg: add initial implementation of